<resources>
    <string name="app_name">Bonappetit</string>

    <!-- 食材管理画面(Stock manager) -->
    <string name="sm_title">食材管理</string>
    <string name="sm_register">登録</string>
    <string name="sm_search_by_name_hint">検索</string>
    <string name="sm_sort_register_oder_asc">昇順:登録順</string>
    <string name="sm_sort_register_oder_desc">降順:登録順</string>
    <string name="sm_search_by_category_on">絞り込み:ON</string>
    <string name="sm_search_by_category_off">絞り込み:OFF</string>
    <string name="sm_search_dialog_tag">Search dialog</string>
    <string name="sm_search_dialog_title">食材の種類を選択してください</string>

    <!-- 食材登録画面(Stock register) -->
    <string name="sr_input_num">個数を入力してください</string>
    <string name="sr_food_not_selected">食べ物を選択してください</string>
    <string name="sr_register">登録</string>
    <string name="sr_cancel">キャンセル</string>
    <string name="sr_food_selector">食材を選択してください</string>
    <string name="sr_failed_to_register">登録に失敗しました</string>
    <string name="sr_no_food_selected">食材が選択されていません</string>
    <string name="sr_no_quantity_entered">数量が入力されていません</string>
    <string name="sr_date_text">ここをタップで日付を選択</string>
    <string name="sr_date_picker_tag">Date picker</string>
    <string name="sr_note">備考</string>
    <string name="sr_current_stock">現在%1$d%2$sの在庫があります</string>
    <string name="sr_current_stock_empty">在庫はありません</string>

    <!-- 食材詳細画面(Stock detail) -->
    <string name="sd_title">食材詳細</string>
    <string name="sd_back_to_sm">戻る</string>
    <string name="sd_quantity_edited">編集済み</string>
    <string name="sd_note_edited">編集済み</string>
    <string name="sd_save">変更を保存</string>
    <string name="sd_name">名称</string>
    <string name="sd_note">備考を入力してください</string>
    <string name="sd_consume">消費済</string>

    <!-- 消費履歴(Consume history) -->
    <string name="ch_title">消費履歴</string>

    <!-- カレンダー(Calender) -->
    <string name="c_title">カレンダー</string>

    <!-- mock -->
    <string name="mock_message">hogefuga</string>
</resources>