<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >

    <data>
        <variable
            name="viewModel"
            type="com.graduation_work.bonappetit.ui.view_model.StockDetailViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFCC"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_title" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.name}" />

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.quantity}"
                android:inputType="number"
                android:afterTextChanged="@{(s) -> viewModel.onQuantityChange(s)}" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{viewModel.unit}" />
        </LinearLayout>

        <ImageView
            android:layout_width="50dp"
            android:layout_height="50dp"
            app:imageBitmap="@{viewModel.image}" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@{viewModel.note}"
            android:inputType="text"
            android:afterTextChanged="@{(s) -> viewModel.onNoteChange(s)}"/>

        <Button
            android:id="@+id/sd_back_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_back_to_sm" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sd_save"
            android:enabled="@{viewModel.isSaveBtnEnable()}"
            android:onClick="@{() -> viewModel.onSaveBtnClick()}" />
    </LinearLayout>
</layout>