<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".StockListFragment">

    <data>
        <variable
            name="viewModel"
            type="com.graduation_work.bonappetit.ui.view_model.StockManagerViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFCC"
        android:orientation="vertical" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sm_title" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sm_search_by_name_hint"
            android:text="@={viewModel.searchString}" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/stock_list_rv"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="8"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center|bottom"
            android:orientation="horizontal"
            android:visibility="visible" >

            <Button
                android:id="@+id/search_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:onClick="@{() -> viewModel.onSearchBtnClick()}"
                android:text="@{viewModel.searchBtnText}"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/sort_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#ffffff"
                android:onClick="@{() -> viewModel.onSortBtnClick()}"
                android:text="@{viewModel.sortBtnText}"
                android:textColor="@color/black" />

            <Button
                android:id="@+id/register_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="#A3E870"
                app:iconTint="#A3E870"
                android:onClick="@{() -> viewModel.onRegisterBtnClick()}"
                android:text="@string/sm_register" />
        </LinearLayout>
    </LinearLayout>
</layout>